Flex styles to fix issues on ie

--- a/content/themes/igcp/blocks/scss/block-home-hero.scss
+++ b/content/themes/igcp/blocks/scss/block-home-hero.scss
@@ -35,7 +35,7 @@
 
   @include break-min($sm) {
     width: calc((2 / 5) * 100%);
-    flex: 0 0 calc((2 / 5) * 100%);
+    flex: 1 1 calc((2 / 5) * 100%);
     display: flex;
     order: 1;
   }
@@ -49,7 +49,7 @@
 .editor-block-list__layout .her-Home_Column-large {
   @include break-min($sm) {
     width: calc((3 / 5) * 100%);
-    flex: 0 0 calc((3 / 5) * 100%);
+    flex: 1 1 calc((3 / 5) * 100%);
     order: 2;
   }
   @include break-min($md) {
